--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,7 @@
   chat-title="Ecom-bot "
   agent-id="72e1a107-5ded-4dfc-b821-0a3b60af565b"
   language-code="es"
+  chat-icon="./ecom2.png"
 ></df-messenger>
   
 </body>
